fixed missaligned text

--- a/src/App.css
+++ b/src/App.css
@@ -131,10 +131,10 @@ button[type="download"] {
 }
 
 .card-group {
-  position: inherit;
+  position: absolute;
   font-family: 'BLAME', sans-serif;
-  margin-top: 52px;
-  margin-left: 15px;
+  margin-top: 40px;
+  margin-left: 28px;
   font-size: 14px;
   width: 200px;
 }
@@ -168,10 +168,11 @@ button[type="download"] {
 }
 
 .card-type {
+  position: inherit;
   font-family: 'BLAME', sans-serif;
-  margin-top: -40px;
+  margin-top: 10px;
   margin-left: auto;
-  margin-right: 15px;
+  margin-right: 28px;
   font-size: 14px;
   text-align: justify;
   max-width : 100px;
